<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/ed_creditcardnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_cardholdername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/creditcard_hint"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:singleLine="true" >
    </EditText>

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/pay" />

    <TextView
        android:id="@+id/txt_cardholdername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ed_creditcardnumber"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/cardholder_name" />

    <TextView
        android:id="@+id/txt_totalamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ed_creditcardnumber"
        android:layout_below="@+id/ed_creditcardnumber"
        android:layout_marginTop="10dp"
        android:text="@string/total_amount" />

</RelativeLayout>