<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_coupondec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txt_coupontitle"
                android:layout_below="@+id/txt_coupontitle"
                android:layout_marginTop="5dp"
                android:text="@string/desc_of_coupon" />

            <RelativeLayout
                android:id="@+id/rl_image"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:id="@+id/img_coupon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_empty" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_expiredate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txt_coupondec"
                android:layout_below="@+id/txt_coupondec"
                android:layout_marginTop="20dp"
                android:text="@string/expire_date" />

            <TextView
                android:id="@+id/txt_availability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txt_expiredate"
                android:layout_below="@+id/txt_expiredate"
                android:layout_marginTop="10dp"
                android:text="@string/availability" />

            <TextView
                android:id="@+id/txt_refcommission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txt_availability"
                android:layout_alignBottom="@+id/txt_availability"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/txt_availability"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/revcoupon_referral_commission" />

            <TextView
                android:id="@+id/txt_coupontitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/rl_image"
                android:layout_below="@+id/rl_image"
                android:text="@string/coupon_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:weightSum="1" >

            <Button
                android:id="@+id/btn_approve"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/approve" />

            <Button
                android:id="@+id/btn_decline"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/decline" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Left Drawrer -->

    <RelativeLayout
        android:id="@+id/rl_leftdrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white" >

        <include
            android:id="@+id/vendorleftdrawer"
            layout="@layout/vendor_leftdrawer" />
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>