<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splesh_background" >

    <RelativeLayout
        android:id="@+id/rl_promoterhome"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btn_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:background="@color/button_color"
            android:padding="10dip"
            android:text="@string/edit_profile" />

        <Button
            android:id="@+id/btn_all_coupons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_edit_profile"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:background="@color/button_color"
            android:padding="10dip"
            android:text="@string/all_coupons" />

        <Button
            android:id="@+id/btn_withdrawal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_all_coupons"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:background="@color/button_color"
            android:padding="10dip"
            android:text="@string/withdrawal" />

        <Button
            android:id="@+id/btn_payment_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_withdrawal"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:background="@color/button_color"
            android:padding="10dip"
            android:text="@string/payment_information" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_payment_information"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:background="@color/button_color"
            android:padding="10dip"
            android:text="@string/logout" />
    </RelativeLayout>
    <!-- Left Drawrer -->

    <RelativeLayout
        android:id="@+id/rl_leftdrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white" >

        <include
            android:id="@+id/promoterleftdrawer"
            layout="@layout/promoter_leftdrawer" />
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>