<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="45dp" 
        android:background="@drawable/status_bar_bg">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp" >

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:src="@drawable/back_button_small" />

            <TextView
                android:id="@+id/txt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@+id/img_back"
                android:text="@string/back" 
                android:visibility="gone"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/payment"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_paymentcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_header" >

        <EditText
            android:id="@+id/ed_creditcardnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_cardholdername"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/profile_edit_input_box"
            android:ems="10"
            android:hint="@string/creditcard_hint"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingLeft="10dip"
            android:singleLine="true" >
        </EditText>

        <Button
            android:id="@+id/btn_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@color/selected_tab"
            android:padding="10dp"
            android:text="@string/pay"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txt_cardholdername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ed_creditcardnumber"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/cardholder_name"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txt_totalamount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ed_creditcardnumber"
            android:layout_below="@+id/ed_creditcardnumber"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/total_amount"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</RelativeLayout>