<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splesh_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_vendorpayment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <EditText
            android:id="@+id/ed_cardnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/profile_edit_input_box"
            android:ems="10"
            android:hint="@string/cardnumber_hint"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="19"
            android:paddingLeft="10dip"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/ed_cvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_cardnumber"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/profile_edit_input_box"
            android:ems="10"
            android:hint="@string/cvv_hint"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="3"
            android:paddingLeft="10dip"
            android:paddingTop="5dp" />

        <EditText
            android:id="@+id/ed_expirationmonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_cvv"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/profile_edit_input_box"
            android:ems="10"
            android:hint="@string/expirationmonth_hint"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            android:paddingLeft="10dip"
            android:singleLine="true" />

        <EditText
            android:id="@+id/ed_expirationyear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_expirationmonth"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/profile_edit_input_box"
            android:ems="10"
            android:hint="@string/expirationyear_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="4"
            android:paddingLeft="10dip"
            android:singleLine="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/selected_tab"
        android:text="@string/pay"
        android:textColor="@android:color/white" />

</RelativeLayout>